--- a/src/Core/Application.Services/Application.Services.csproj
+++ b/src/Core/Application.Services/Application.Services.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
       <PackageReference Include="Ardalis.GuardClauses" Version="3.0.1" />
       <PackageReference Include="Autofac" Version="6.1.0" />
+      <PackageReference Include="FluentValidation" Version="9.5.2" />
       <PackageReference Include="Serilog" Version="2.10.0" />
   </ItemGroup>
 
