--- a/src/Core/Domain/Domain.csproj
+++ b/src/Core/Domain/Domain.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FluentValidation" Version="9.5.2" />
         <PackageReference Include="NodaTime" Version="3.0.5" />
     </ItemGroup>
 
