--- a/src/Core/Application.Services/Application.Services.csproj
+++ b/src/Core/Application.Services/Application.Services.csproj
@@ -9,6 +9,7 @@
       <PackageReference Include="Ardalis.GuardClauses" Version="3.0.1" />
       <PackageReference Include="Autofac" Version="6.1.0" />
       <PackageReference Include="FluentValidation" Version="9.5.2" />
+      <PackageReference Include="LanguageExt.Core" Version="3.4.15" />
       <PackageReference Include="Serilog" Version="2.10.0" />
   </ItemGroup>
 
