--- a/src/Core/Domain/Domain.csproj
+++ b/src/Core/Domain/Domain.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
         <PackageReference Include="FluentValidation" Version="9.5.2" />
+        <PackageReference Include="LanguageExt.Core" Version="3.4.15" />
         <PackageReference Include="NodaTime" Version="3.0.5" />
     </ItemGroup>
 
