--- a/tests/WebApi.Tests/WebApi.Tests.csproj
+++ b/tests/WebApi.Tests/WebApi.Tests.csproj
@@ -8,6 +8,7 @@
     <ItemGroup>
         <PackageReference Include="Bogus" Version="33.0.2" />
         <PackageReference Include="FluentAssertions" Version="5.10.3" />
+        <PackageReference Include="FluentAssertions.Json" Version="5.5.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="5.0.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
         <PackageReference Include="Moq" Version="4.15.2" />
