--- a/src/Infrastructure/WebApi/WebApi.csproj
+++ b/src/Infrastructure/WebApi/WebApi.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\..\Core\Application.Services\Application.Services.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.4" />
+    </ItemGroup>
+
 </Project>
