--- a/src/Core/Domain/Domain.csproj
+++ b/src/Core/Domain/Domain.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Ardalis.GuardClauses" Version="3.0.1" />
         <PackageReference Include="FluentValidation" Version="9.5.2" />
         <PackageReference Include="LanguageExt.Core" Version="3.4.15" />
         <PackageReference Include="NodaTime" Version="3.0.5" />
