--- a/src/Infrastructure/Persistence/Persistence.csproj
+++ b/src/Infrastructure/Persistence/Persistence.csproj
@@ -18,6 +18,7 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.0" />
       <PackageReference Include="NodaTime.EntityFrameworkCore.Conversions" Version="2.0.0" />
+      <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
       <PackageReference Include="SimplerSoftware.EntityFrameworkCore.SqlServer.NodaTime" Version="5.0.1" />
       <PackageReference Include="SQLite" Version="3.13.0" />
       <PackageReference Include="NETStandard.Library" Version="2.0.3" />
@@ -30,5 +31,11 @@
     <ItemGroup>
         <None Remove="Scripts\Script0001 - Create tables.sql" />
         <EmbeddedResource Include="Scripts\Script0001 - Create tables.sql" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="Microsoft.Extensions.Logging.Console, Version=5.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60">
+        <HintPath>..\..\..\..\..\..\..\Program Files\dotnet\packs\Microsoft.AspNetCore.App.Ref\5.0.0\ref\net5.0\Microsoft.Extensions.Logging.Console.dll</HintPath>
+      </Reference>
     </ItemGroup>
 </Project>
