feat: first implementation of create user

--- a/tests/Application.Services.Tests/Application.Services.Tests.csproj
+++ b/tests/Application.Services.Tests/Application.Services.Tests.csproj
@@ -38,4 +38,8 @@
     <ProjectReference Include="..\..\src\Core\Application.Services\Application.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="TodoList" />
+  </ItemGroup>
+
 </Project>
