refactor: reorganize folders

--- a/src/Core/Application.Services/Application.Services.csproj
+++ b/src/Core/Application.Services/Application.Services.csproj
@@ -17,4 +17,9 @@
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Todos\UseCases" />
+    <Folder Include="Users" />
+  </ItemGroup>
+
 </Project>
