--- a/tests/Persistence.Tests/Persistence.Tests.csproj
+++ b/tests/Persistence.Tests/Persistence.Tests.csproj
@@ -9,7 +9,6 @@
   
   <ItemGroup>
       <PackageReference Include="AutoMapper" Version="10.1.1" />
-      <PackageReference Include="Bogus" Version="7.1.7" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.3" />
       <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="5.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
@@ -43,6 +42,11 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\src\Infrastructure\Persistence\Persistence.csproj" />
+        <ProjectReference Include="..\FakeTestData\FakeTestData.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Todos" />
     </ItemGroup>
 
 </Project>
