feat: integrate create user controller

--- a/tests/WebApi.Tests/WebApi.Tests.csproj
+++ b/tests/WebApi.Tests/WebApi.Tests.csproj
@@ -27,6 +27,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\src\Infrastructure\WebApi\WebApi.csproj" />
+      <ProjectReference Include="..\FakeTestData\FakeTestData.csproj" />
     </ItemGroup>
 
 </Project>
