feat: Validate user is signed up before creating it

--- a/src/Infrastructure/WebApi/WebApi.csproj
+++ b/src/Infrastructure/WebApi/WebApi.csproj
@@ -22,6 +22,7 @@
 
     <ItemGroup>
       <Folder Include="Controllers\Todos" />
+      <Folder Include="Errors" />
     </ItemGroup>
 
 </Project>
